Fixed align issue in dashboard section on word dashboard. started header section

--- a/style.css
+++ b/style.css
@@ -15,12 +15,19 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+svg {
+    width: 24px;
+    height: 24px;
+}
+
+/* dashboard section */
 .dashboard {
     background-color: cornflowerblue;
     grid-column: 1;
     grid-row: 1 / 3;
     color: whitesmoke;
     padding: var(--deckPadding);
+    padding-left: 0;
     display: grid;
     align-items: center;
     padding-bottom: 20vh;
@@ -34,6 +41,7 @@ body {
     grid-template-columns: 1fr 10fr;
     grid-row-gap: 12px;
     grid-column-gap: 8px;
+    padding-left: var(--deckPadding);
 }
 
 #dashboardlogo, #community {
@@ -43,6 +51,7 @@ body {
 #dashboardlogo {
     font-size: 1.6rem;
     font-weight: 700;
+    padding-left: 12px;
 }
 
 #dashboardlogo > svg {
@@ -50,23 +59,45 @@ body {
     height: 36px;
 }
 
-.dashboard > div > svg {
-    width: 18px;
-}
-
+/* header section */
 .header {
     background-color: white;
     grid-column: 2 / 3;
     grid-row: 1;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 10px var(--deckPadding);
 }
 
+.header input {
+    background-color: rgb(236, 236, 236);
+    border: 1px solid rgb(207, 207, 207);
+    outline: none;
+    border-radius: 12px;
+    width: 40vw;
+    height: 24px;
+    padding-left: 8px;
+    font-size: 1.0rem;
+}
+
+.header input:focus {
+    border: 1px solid rgb(94, 94, 94);
+}
+
+#search {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+}
+
+/* main content section */
 .maincontent {
-    overflow: scroll;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0fr;
     padding: var(--deckPadding);
 }
 
@@ -80,7 +111,7 @@ body {
     display: grid;
     gap: var(--grid-gap);
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr repeat(4, 4fr);
+    grid-template-rows: 0fr repeat(4, 4fr);
 }
 
 /* titles for decks */
